[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "breath"
version = "1.9+stats"
description = "Paced breathing CLI (forked from breathe-cli) with per-day session stats"
requires-python = ">=3.7"
dependencies = []

[project.scripts]
breath = "breath:main"

[tool.setuptools]
py-modules = ["breath", "breath_tone"]
